# river-flood-monitor-workflow

./: .gitignore  README.md  pyproject.toml  uv-sync.ps1  uv-sync.sh  workflow.ipynb
.github/: dependabot.yaml
config/: config.yaml
config/risk_profiles/: bicol_evt_pot_calibration.parquet  bicol_oep_curves_all_units.json  cagayan_evt_pot_calibration.parquet  cagayan_oep_curves_all_units.json
config/run_specs/: daily_monitoring.template.yaml  daily_monitoring_etl.template.yaml  daily_monitoring_etl.yaml  precomputed_impacts.example.json
data/etl_step_cache/daily_flood_monitoring/2026-06-01/: prepare.done.json  run_manifest.json
data/etl_step_cache/daily_flood_monitoring/2026-06-01/extract/: Cagayan_01.json  bicol.json  cagayan.json
data/etl_step_cache/daily_flood_monitoring/2026-06-01/forecast/: Cagayan_01.json  bicol.json  cagayan.json
data/etl_step_cache/daily_flood_monitoring_test_bicol/2026-06-01/: run_manifest.json
data/etl_step_cache/daily_flood_monitoring_test_bicol/2026-06-01/extract/: bicol.json
data/etl_step_cache/daily_flood_monitoring_test_bicol/2026-06-01/forecast/: bicol.json
data_update/: README.md  download_jrc_flood_tiles.py
docs/: technical_manual.md
ops/configs/basins/: Cagayan_01.yaml
ops/configs/run_specs/: daily_monitoring_etl.template.yaml
ops/pipeline/: run_daily_monitoring_etl.py  run_monitoring_scheduled.py
src/flood_ops/: cli.py  config.py  logging.py
src/flood_ops/etl/: __init__.py  extract.py  forecast.py  pipeline.py  prepare.py  run_spec.py  save.py  step0_input_evaluation.py  step1_ingest.py  step2_detect.py  step3_impact.py  step4_evaluate.py  step5_decide.py  step6_output.py  utils.py
src/river_flood_monitoring/: __init__.py  cli.py  config.py  logging.py
src/river_flood_monitoring/etl/: __init__.py  extract.py  forecast.py  pipeline.py  prepare.py  run_spec.py  save.py  utils.py
tests/: test_etl_rules.py  test_save_decision.py  test_step3_impact.py
