[project]
name = "river-flood-workflow"
version = "0.1.0"
description = "Workflow for river flood forecast"
authors = [
    {name="David Urueña Ramirez", email="duruenaramirez@redcross.nl"},
    {name="Phuoc Phung", email="pphung@redcross.nl"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
